# refactor-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  doxyfile.in
cli/: CMakeLists.txt  main.cpp
cmake/: AddCXXFlags.cmake  AddConfig.cmake  CMakeUtils.cmake  CodeCoverage.cmake  CodeHardening.cmake  FindClang.cmake  FindLLVM.cmake  ListUtils.cmake
doc/: doxygen.overrides.css
lib/: CMakeLists.txt  config.h.in  export.h  externcallback.cpp  externcallback.h  hook.cpp  hook.h  namestyle.cpp  namestyle.h  refactor-cpp-export.h  refactor.cpp  refactor.h  refactoring.cpp  refactoring.h  refactoringapplication.cpp  refactoringapplication.h  refactoringargs.cpp  refactoringargs.h  refactoringcontext.cpp  refactoringcontext.h  refactoringmodule.cpp  refactoringmodule.h  refactoringregistry.h  refactoringtask.cpp  refactoringtask.h  renamefunction.cpp  renamefunction.h  replacementbuilder.cpp  replacementbuilder.h  replacementgroups.cpp  replacementgroups.h  replacements.cpp  replacements.h
lib/3th-party/: LICENSE.TXT  Tooling.cpp  Tooling.h
lib/core/: parsers.cpp  parsers.h  utils.cpp  utils.h
lib/internals/: clang.cpp  clang.h  version.h
lib/refactorings/rename/: renamefunction.cpp  renamefunction.h  renamemodule.cpp
lib/utils/: algorithm.h  ascii.h  flatmap.h  parsers.cpp  parsers.h  shortcuts.h  strings.h  utils.cpp  utils.h
tests/: CMakeLists.txt  main.cpp  run_cli_tests.py  tests.py
tests/cli/rename-function/: rename-free-function.act.cpp  rename-free-function.orig.cpp
tests/cli/rename-function/simple_project.expected/: CMakeLists.txt  main.cpp  project.cpp  project.h  simple_function.cpp
tests/cli/rename-function/simple_project.orig/: CMakeLists.txt  main.cpp  project.cpp  project.h  simple_function.cpp  test_config.json
tests/cli/rename-function/template_function.expected/: CMakeLists.txt  main.cpp  test_config.json
tests/cli/rename-function/template_function.orig/: CMakeLists.txt  main.cpp  test_config.json
tests/units/: main.cpp  namestyle.cpp  parsers.cpp
tests/units/utils/: container.h  stringgenerator.cpp  stringgenerator.h
